# ttperf

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release.sh  update_pypi.sh
.github/workflows/: publish-to-pypi.yml  test.yml
ttperf.egg-info/: PKG-INFO  SOURCES.txt
